--- a/class 9/templates/index.html
+++ b/class 9/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="/info" method="GET">
+    <form action="/info" method="POST">
         <input type="text" name="user" placeholder="Full Name"><br>
         <input type="email" name="email" placeholder="Email"><br>
         <input type="password" name="pass" placeholder="password"><br>
